# inference-systems-lab

./: .gitignore  AGENTS.md  README.md  Roadmap.md
.github/workflows/: ci.yml
benchmarks/mlx/: mlx-20260611T152449.469357Z.jsonl  mlx-20260611T152449.469357Z.md
projects/01-service-foundations/: .dockerignore  Dockerfile  README.md  compose.yaml  pyproject.toml
projects/01-service-foundations/src/service_foundations/: __init__.py  app.py  config.py  health.py  logging.py  main.py
projects/01-service-foundations/tests/: test_app.py  test_config.py  test_logging.py  test_main.py  test_state.py
projects/02-local-inference/: README.md  pyproject.toml
projects/02-local-inference/src/local_inference/: __init__.py  api.py  api_main.py  api_models.py  app.py  benchmark_cli.py  benchmark_reader.py  benchmark_report.py  benchmark_runner.py  benchmark_schema.py  benchmark_summary.py  benchmark_writer.py  chat.py  config.py  download.py  download_gguf.py  health.py  llama_backend.py  mlx_backend.py  prompts.py  report_cli.py  service_state.py  smoke.py
projects/02-local-inference/tests/: test_api.py  test_api_main.py  test_benchmark_cli.py  test_benchmark_reader.py  test_benchmark_report.py  test_benchmark_runner.py  test_benchmark_schema.py  test_benchmark_summary.py  test_benchmark_writer.py  test_download_gguf.py  test_llama_backend.py  test_openai_sdk.py  test_report_cli.py  test_smoke.py
projects/03-production-serving/: README.md  REPORT.md  pyproject.toml
projects/03-production-serving/benchmarks/: load-10x10.json  load-10x5.json
projects/03-production-serving/observability/: README.md  compose.yaml  prometheus.yml
projects/03-production-serving/observability/grafana/dashboards/: production-serving.json
projects/03-production-serving/observability/grafana/provisioning/dashboards/: dashboards.yml
projects/03-production-serving/src/production_serving/: __init__.py  admission.py  api.py  app.py  backend.py  chat_client.py  config.py  context.py  failure_runner.py  load_runner.py  main.py  metrics.py  models.py  rate_limit.py  streaming.py
projects/03-production-serving/tests/: test_admission.py  test_chat_client.py  test_config.py  test_context.py  test_failure_runner.py  test_failures.py  test_load_runner.py  test_metrics.py  test_rate_limit.py  test_streaming.py
projects/04-nvidia-inference/: README.md  REPORT.md  pyproject.toml
projects/04-nvidia-inference/benchmarks/: fp16-c1.json  fp16-c2.json  fp16-c4.json  fp16-c8-warm.json  fp16-c8.json  gptq-c1-warm.json  gptq-c1.json  gptq-c2-warm.json  gptq-c2.json  gptq-c4-warm.json  gptq-c4.json  gptq-c8-warm.json  gptq-c8.json  gptq-capacity-c128.json  gptq-capacity-c16.json  gptq-capacity-c32.json  gptq-capacity-c64.json
projects/04-nvidia-inference/src/nvidia_inference/: benchmark.py  config.py
projects/04-nvidia-inference/tests/: test_benchmark.py  test_config.py
projects/05-reliable-deployment/: .env.example  README.md  REPORT.md
projects/05-reliable-deployment/kubernetes/: deployment.yaml  service.yaml
projects/06-internal-inference-access/: .env.example  Dockerfile  README.md  REPORT.md  pyproject.toml
projects/06-internal-inference-access/benchmarks/: access-control.json  five-user-streaming.json
projects/06-internal-inference-access/kubernetes/: deployment.yaml  service.yaml
projects/06-internal-inference-access/runpod/: start-vllm.sh
projects/06-internal-inference-access/src/internal_inference_access/: __init__.py  app.py  auth.py  chat_client.py  config.py  main.py  metrics.py  proxy.py  rate_limit.py
projects/06-internal-inference-access/tests/: test_app.py  test_auth.py  test_chat_client.py  test_config.py  test_main.py  test_rate_limit.py
