[project]
name = "service-foundations"
version = "0.1.0"
description = "Production-oriented service foundations for inference systems"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
  "fastapi",
  "pydantic-settings",
  "uvicorn",
]

[project.scripts]
service-foundations = "service_foundations.main:main"

[dependency-groups]
dev = [
  "httpx2>=2.4.0",
  "mypy",
  "pytest",
  "pytest-cov",
  "ruff",
]

[build-system]
requires = ["uv_build>=0.11.20,<0.12.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
addopts = "--cov=service_foundations --cov-report=term-missing --cov-fail-under=95"
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.13"
strict = true
packages = ["service_foundations"]
