[project]
name = "local-inference"
version = "0.2.0"
description = "Local model inference experiments on Apple Silicon"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
  "fastapi==0.136.3",
  "huggingface-hub==1.7.1",
  "mlx-lm==0.31.3",
  "psutil==7.2.2",
  "uvicorn==0.49.0",
]

[project.scripts]
download-gguf-model = "local_inference.download_gguf:main"
download-model = "local_inference.download:main"
local-inference-api = "local_inference.api_main:main"
mlx-benchmark = "local_inference.benchmark_cli:main"
mlx-benchmark-report = "local_inference.report_cli:main"
mlx-smoke-test = "local_inference.smoke:main"

[dependency-groups]
dev = [
  "httpx2==2.4.0",
  "mypy",
  "openai==2.41.1",
  "pytest",
  "ruff",
  "types-psutil==7.2.2.20260518",
]

[build-system]
requires = ["uv_build>=0.11.20,<0.12.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.13"
strict = true
packages = ["local_inference"]
