[project]
name = "nvidia-inference"
version = "0.4.0"
description = "vLLM serving configuration and benchmarking prep for a rented NVIDIA GPU"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = []

[project.scripts]
nvidia-benchmark = "nvidia_inference.benchmark:main"
nvidia-serve-command = "nvidia_inference.config:print_serve_command"

[dependency-groups]
dev = [
  "mypy",
  "pytest",
  "ruff",
]

[build-system]
requires = ["uv_build>=0.11.20,<0.12.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.13"
strict = true
packages = ["nvidia_inference"]
